[package]
name = "message_via_telegram_bot"
version = "0.1.0"
authors = ["Rodney Lab <@askRodney>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
netlify_lambda_http = "0.2"
reqwest = { version = "0.11.4", features = ["json"]}
serde = "1.0.117"
serde_json = "1.0.59"
tokio = { version = "1.0.1", features = ["macros"] }

[dev-dependencies]
httptest = "0.15"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
