[package]
edition = "2018"
name = "contact-form-message"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.5.0"
http = "0.2.6"
lambda_runtime = "0.5.1"
log = "0.4.14"
reqwest = { version = "0.11.10", features = ["json"]}
simple_logger = "1.16.0"
tokio = "1.17.0"
